Se realizan ajustes, de los test, corrigiendo  los warnings